# MCP-Kali-Server

./: .gitignore  README.md  config.yaml  input_validation.py  logging_setup.py  pyproject.toml  safe_command_runner.py  server.py
tools/: __init__.py  breach_tools.py  crtsh_tools.py  dirb_tools.py  dns_tools.py  github_tools.py  gobuster_tools.py  http_tools.py  nikto_tools.py  nmap_tools.py  shodan_tools.py  sqlmap_tools.py  ssl_tools.py  system_tools.py  theharvester_tools.py  wayback_tools.py  whois_tools.py  wpscan_tools.py
